--- a/view.html
+++ b/view.html
@@ -7,6 +7,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="js/ViewController.js"></script>
+    <script src="js/Simulation.js"></script>
+    <script src="js/Algorithm.js"></script>
+    <script src="js/CellLocationCalculator.js"></script>
     <script src="js/Grid.js"></script>
     <script src="js/Cell.js"></script>
 </head>
@@ -26,7 +29,11 @@
                 <input name="col" value="20">
             </form><br>
             <button name="update_btn" onclick="modifyGrid();">Update Dimensions</button>
+            <button name="start_btn" onclick="startAnimations();">Start</button>
+            <button name="stop_btn" onclick="pauseAnimations();">Pause</button>
+            <button name="sim_btn" onclick="createSimulation();">Create Simulation</button>
         </div>
+
     </div>
 </body>
 </html>
