cells rendering on screen. Still do not fit canvas

--- a/view.html
+++ b/view.html
@@ -23,10 +23,10 @@
         <div id="control_col">
             <form>
                 Rows:<br>
-                <input name="row" value="20">
+                <input name="row" value="2" id="row">
                 <br>
                 Columns:<br>
-                <input name="col" value="20">
+                <input name="col" value="2" id="col">
             </form><br>
             <button name="update_btn" onclick="modifyGrid();">Update Dimensions</button>
             <button name="start_btn" onclick="startAnimations();">Start</button>
