--- a/view.html
+++ b/view.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/view_stylesheet.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="js/XMLParser.js"></script>
     <script src="js/ViewController.js"></script>
     <script src="js/Simulation.js"></script>
     <script src="js/Algorithm.js"></script>
@@ -23,10 +24,10 @@
         <div id="control_col">
             <form>
                 Rows:<br>
-                <input name="row" value="3" id="row">
+                <input name="row" value="20" id="row">
                 <br>
                 Columns:<br>
-                <input name="col" value="3" id="col">
+                <input name="col" value="20" id="col">
             </form><br>
             <button name="update_btn" onclick="modifyGrid();">Update Dimensions</button>
             <button name="start_btn" onclick="startAnimations();">Start</button>
